- Refactored the CI/CD pipeline to handle artifact directories instead of single files, enabling support for dynamic APK naming.
- Implemented branch-aware logic in the Gradle build script to differentiate build configurations.
- Dynamically set `applicationIdSuffix` and the application's display name based on the current Git branch (e.g., `nightly`, `debug`), allowing different versions to be installed side-by-side.
- Introduced a new APK filename convention that includes the short Git commit hash for improved version traceability.
- Performed minor formatting adjustments in the `.gitlab-ci.yml` configuration for better readability.

> [!NOTE]
> This update refactors the entire build process to better distinguish between `nightly` and `master` (release) builds.
> - **Side-by-Side Installation**: Nightly versions now use the `.nightly` application ID suffix and are named "Telegram SMS (Nightly)", allowing them to be installed alongside the stable release without conflict.
> - **Improved Version Tracking**: All APK filenames now include the short Git commit hash (e.g., `telegram-sms-nightly-a1b2c3d.apk`), making it easy to identify the exact source code version of each build.